feat: add Pinecone and Redis support to LangchainRagService
Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@langchain/core": "^0.3.56",
     "@langchain/openai": "^0.5.10",
     "@langchain/pinecone": "^0.2.0",
+    "@langchain/redis": "^0.1.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -36,6 +37,7 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "@pinecone-database/pinecone": "^6.0.0",
+    "@redis/client": "^5.1.0",
     "@types/langdetect": "^0.2.2",
     "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
