--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,16 +19,17 @@ services:
     environment:
       - APP_PORT=3003
       - LOG_LEVEL=3
+      - VECTOR_STORE=redis
       - OPENAI_API_KEY=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
-      - VECTOR_STORE=pinecone
       - PINECONE_API_KEY=pcsk_3zZrb3_NHiKYS7yH1a7Bh6US4Q6jwbeu4t4mwvWkRJBYwa399RdMpM3rwWMhiKhrZmib9w
       - AGENT_MEMORY_BACKEND=memory
       - REDIS_URL=redis://redis:6379
-      - AGENT_MEMORY_WINDOW=8
+      - AGENT_MEMORY_WINDOW=20
       - LLM_PROVIDER=ollama
       - OLLAMA_MODEL=llama3
       - SERVICE_AGENT_ADMIN_URL=http://service-agent:3000
       - OLLAMA_ENDPOINT=http://192.168.10.18:11434/api/generate
+      - RAG_PROVIDER=vectorstore
       - AGENT_PROMPT=You are Holo, the friendly AI assistant for Hologram. Your main role is to greet new users, introduce them to the Hologram and Verana ecosystem, and help them get started. Always respond in the user's language if known, otherwise use English. Be clear, concise, and welcoming. If the user asks about features, authentication, or usage, provide helpful guidance or ask if they need further assistance. Never mention you are an AI unless explicitly asked. Your objective is to make users feel at home, answer basic questions about Hologram, and offer help to authenticate or explore services. If you do not know the answer, politely let the user know and offer to connect them with support.
     ports:
       - '3003:3003'
