feat: improve document ingestion to RAG service.
Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@pinecone-database/pinecone": "^6.0.0",
     "@redis/client": "^5.1.0",
     "@types/langdetect": "^0.2.2",
+    "@types/pdf-parse": "^1.1.5",
     "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -46,6 +47,7 @@
     "langchain": "^0.3.26",
     "langdetect": "^0.2.1",
     "openai": "^4.100.0",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.16.0",
     "postgres": "^3.4.7",
     "redis": "^5.1.0",
