--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "csv-parse": "^5.6.0",
     "franc-min": "^6.2.0",
     "langchain": "^0.3.26",
     "langdetect": "^0.2.1",
@@ -63,6 +64,7 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/csv-parse": "^1.2.5",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
