fix: fix ESLint and TypeScript errors across codebase
Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@langchain/core": "^0.3.56",
     "@langchain/openai": "^0.5.10",
     "@langchain/pinecone": "^0.2.0",
-    "@langchain/redis": "^0.1.1",
+    "@langchain/redis": "^0.1.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -39,7 +39,12 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "@pinecone-database/pinecone": "^6.0.0",
-    "@redis/client": "^5.1.0",
+    "@redis/bloom": "^5.1.1",
+    "@redis/client": "^1.6.1",
+    "@redis/graph": "^1.1.1",
+    "@redis/json": "^5.1.1",
+    "@redis/search": "^5.1.1",
+    "@redis/time-series": "^5.1.1",
     "@types/langdetect": "^0.2.2",
     "@types/pdf-parse": "^1.1.5",
     "axios": "^1.9.0",
@@ -53,7 +58,7 @@
     "pdf-parse": "^1.1.1",
     "pg": "^8.16.0",
     "postgres": "^3.4.7",
-    "redis": "^5.1.0",
+    "redis": "^4.6.7",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.24"
