refactor: LlmService with LangChain llm and tools configurable support,
Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB_NAME: ${POSTGRES_DB_NAME}
       CREDENTIAL_DEFINITION_ID: ${CREDENTIAL_DEFINITION_ID}
+      TOOLS_CONFIG: ${TOOLS_CONFIG}
     ports:
       - '${APP_PORT}:${APP_PORT}'
     volumes:
