--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@2060.io/service-agent-nestjs-client": "1.2.1-dev.1",
     "@anthropic-ai/sdk": "^0.51.0",
     "@credo-ts/core": "^0.5.11",
+    "@langchain/anthropic": "^0.3.21",
     "@langchain/community": "^0.3.43",
-    "@langchain/core": "^0.3.56",
+    "@langchain/core": "^0.3.57",
+    "@langchain/ollama": "^0.2.1",
     "@langchain/openai": "^0.5.10",
     "@langchain/pinecone": "^0.2.0",
     "@langchain/redis": "^0.1.0",
@@ -61,7 +63,8 @@
     "redis": "^4.6.7",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.24"
+    "typeorm": "^0.3.24",
+    "zod": "^3.25.51"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -76,9 +79,9 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
-    "eslint": "^9.18.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.2",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
