refactor: Refactored to load JMS stats module settings from environment variables and docs
Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,18 +24,19 @@ services:
       REDIS_URL: ${REDIS_URL}
       AGENT_MEMORY_WINDOW: ${AGENT_MEMORY_WINDOW}
       LLM_PROVIDER: ${LLM_PROVIDER}
-      SERVICE_AGENT_ADMIN_URL: ${SERVICE_AGENT_ADMIN_URL}
       RAG_PROVIDER: ${RAG_PROVIDER}
       RAG_DOCS_PATH: ${RAG_DOCS_PATH}
       VECTOR_INDEX_NAME: ${VECTOR_INDEX_NAME}
       AGENT_PROMPT: ${AGENT_PROMPT}
       PINECONE_API_KEY: ${PINECONE_API_KEY}
+      TOOLS_CONFIG: ${TOOLS_CONFIG}
       POSTGRES_HOST: ${POSTGRES_HOST}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB_NAME: ${POSTGRES_DB_NAME}
       CREDENTIAL_DEFINITION_ID: ${CREDENTIAL_DEFINITION_ID}
-      TOOLS_CONFIG: ${TOOLS_CONFIG}
+      VS_AGENT_STATS_ENABLED: ${VS_AGENT_STATS_ENABLED}
+      SERVICE_AGENT_ADMIN_URL: ${SERVICE_AGENT_ADMIN_URL}
     ports:
       - '${APP_PORT}:${APP_PORT}'
     volumes:
