--- a/deployment/templates/redis-deployment.yaml
+++ b/deployment/templates/redis-deployment.yaml
@@ -29,7 +29,7 @@ spec:
 ---
 {{- if .Values.redis.enabled }}
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: {{ include "chatbot.fullname" . }}-redis
   labels:
