--- a/deployment/templates/redis-deployment.yaml
+++ b/deployment/templates/redis-deployment.yaml
@@ -1,21 +1,9 @@
-{{- if .Values.redis.persistence.enabled }}
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: redis-pvc
-spec:
-  accessModes:
-    {{- toYaml .Values.redis.persistence.accessModes | nindent 4 }}
-  resources:
-    requests:
-      storage: {{ .Values.redis.persistence.size }}
-{{- end }}
----
 {{- if .Values.redis.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "chatbot.fullname" . }}-redis
+  namespace: {{ .Values.namespace }}
 spec:
   type: {{ .Values.redis.service.type }}
   ports:
@@ -32,6 +20,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: {{ include "chatbot.fullname" . }}-redis
+  namespace: {{ .Values.namespace }}
   labels:
     app.kubernetes.io/component: redis
     {{- include "chatbot.labels" . | nindent 4 }}
@@ -59,10 +48,12 @@ spec:
             - name: redis-data
               mountPath: {{ .Values.redis.persistence.mountPath }}
           {{- end }}
-      {{- if .Values.redis.persistence.enabled }}
-      volumes:
-        - name: redis-data
-          persistentVolumeClaim:
-            claimName: redis-pvc
-      {{- end }}
+  volumeClaimTemplates:
+    - metadata:
+        name: redis-data
+      spec:
+        accessModes: ["ReadWriteOnce"]
+        resources:
+          requests:
+            storage: {{ .Values.redis.persistence.size }}    
 {{- end }}
