--- a/deployment/templates/vs-agent-deployment.yaml
+++ b/deployment/templates/vs-agent-deployment.yaml
@@ -1,20 +1,19 @@
-{{- if and .Values.serviceAgent.enabled .Values.serviceAgent.ingress.enabled }}
+{{- if and .Values.vsAgent.enabled .Values.vsAgent.ingress.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ include "chatbot.fullname" . }}-vs-agent
+  namespace: {{ .Values.namespace }}
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   ingressClassName: nginx
-  {{- if .Values.serviceAgent.ingress.tls }}
   tls:
     - hosts:
-        - {{ .Values.serviceAgent.ingress.host }}
-      secretName: {{ .Values.serviceAgent.ingress.tlsSecret }}
-  {{- end }}
+        - {{ .Values.vsAgent.ingress.host }}
+      secretName: {{ .Values.vsAgent.ingress.tlsSecret }}
   rules:
-    - host: {{ .Values.serviceAgent.ingress.host }}
+    - host: {{ .Values.vsAgent.ingress.host }}
       http:
         paths:
           - path: /
@@ -23,38 +22,41 @@ spec:
               service:
                 name: {{ include "chatbot.fullname" . }}-vs-agent
                 port:
-                  number: {{ .Values.serviceAgent.service.ports.http }}
+                  number: {{ .Values.vsAgent.service.ports.http }}
 {{- end }}
 ---
-{{- if .Values.serviceAgent.enabled }}
+{{- if .Values.vsAgent.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "chatbot.fullname" . }}-vs-agent
+  namespace: {{ .Values.namespace }}
 spec:
-  type: {{ .Values.serviceAgent.service.type }}
+  type: {{ .Values.vsAgent.service.type }}
   ports:
-    - port: {{ .Values.serviceAgent.service.ports.http }}
-      targetPort: {{ .Values.serviceAgent.service.ports.http }}
+    - port: {{ .Values.vsAgent.service.ports.http }}
+      targetPort: {{ .Values.vsAgent.service.ports.http }}
       name: http
-    - port: {{ .Values.serviceAgent.service.ports.ws }}
-      targetPort: {{ .Values.serviceAgent.service.ports.ws }}
+    - port: {{ .Values.vsAgent.service.ports.ws }}
+      targetPort: {{ .Values.vsAgent.service.ports.ws }}
       name: ws
   selector:
     app.kubernetes.io/component: vs-agent
     {{- include "chatbot.selectorLabels" . | nindent 4 }}
 {{- end }}
 ---
-{{- if .Values.serviceAgent.enabled }}
+{{- if .Values.vsAgent.enabled }}
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: {{ include "chatbot.fullname" . }}-vs-agent
+  namespace: {{ .Values.namespace }}
   labels:
     app.kubernetes.io/component: vs-agent
     {{- include "chatbot.labels" . | nindent 4 }}
 spec:
-  replicas: {{ .Values.serviceAgent.replicaCount }}
+  serviceName: {{ include "chatbot.fullname" . }}-vs-agent
+  replicas: {{ .Values.vsAgent.replicaCount }}
   selector:
     matchLabels:
       app.kubernetes.io/component: vs-agent
@@ -67,18 +69,18 @@ spec:
     spec:
       containers:
         - name: vs-agent
-          image: "{{ .Values.serviceAgent.image.repository }}:{{ .Values.serviceAgent.image.tag }}"
+          image: "{{ .Values.vsAgent.image.repository }}:{{ .Values.vsAgent.image.tag }}"
           resources:
             {{- toYaml .Values.chatbot.resources | nindent 12 }} 
-          imagePullPolicy: {{ .Values.serviceAgent.image.pullPolicy }}
+          imagePullPolicy: {{ .Values.vsAgent.image.pullPolicy }}
           ports:
-            - containerPort: {{ .Values.serviceAgent.service.ports.http }}
+            - containerPort: {{ .Values.vsAgent.service.ports.http }}
               name: http
-            - containerPort: {{ .Values.serviceAgent.service.ports.ws }}
+            - containerPort: {{ .Values.vsAgent.service.ports.ws }}
               name: ws
           envFrom:
             - configMapRef:
-                name: {{ .Values.serviceAgent.envFrom.configMap | quote }}
+                name: {{ .Values.vsAgent.envFrom.configMap | quote }}
             - secretRef:
-                name: {{ .Values.serviceAgent.envFrom.secret | quote }}
+                name: {{ .Values.vsAgent.envFrom.secret | quote }}
 {{- end }}
