ci: Refactor CI/CD workflows with as suggested.
Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,3 +35,9 @@ jobs:
 
       - name: Build
         run: pnpm build
+
+      - name: Setup Helm
+        uses: azure/setup-helm@v3
+
+      - name: Validate Helm chart
+        run: helm lint ./charts
