--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@langchain/openai": "^0.5.10",
     "@langchain/pinecone": "^0.2.0",
     "@langchain/redis": "^0.1.0",
+    "@langchain/textsplitters": "^0.1.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
