--- a/charts/templates/artemis-deployment.yaml
+++ b/charts/templates/artemis-deployment.yaml
@@ -1,4 +1,14 @@
-{{- if .Values.artemis.enabled }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Values.artemis.envFrom.secret | quote }}
+  namespace: {{ .Values.namespace }}
+type: Opaque
+stringData:
+  {{- range $key, $val := .Values.artemis.secret }}
+  {{ $key }}: {{ tpl $val $ | quote }}
+  {{- end }}
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -19,10 +29,9 @@ spec:
   selector:
     app.kubernetes.io/component: artemis
     {{- include "chatbot.selectorLabels" . | nindent 4 }}
-{{- end }}
+
 ---
 
-{{- if .Values.artemis.enabled }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -73,4 +82,3 @@ spec:
         resources:
           requests:
             storage: {{ .Values.artemis.storage.size }}
-{{- end }}
