--- a/charts/templates/postgres-deployment.yaml
+++ b/charts/templates/postgres-deployment.yaml
@@ -1,4 +1,15 @@
-{{- if .Values.postgres.enabled }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Values.postgres.envFrom.secret | quote }}
+  namespace: {{ .Values.namespace }}
+type: Opaque
+stringData:
+  {{- range $key, $val := .Values.postgres.secret }}
+  {{ $key }}: {{ tpl $val $ | quote }}
+  {{- end }}
+---
+
 apiVersion: v1
 kind: Service
 metadata:
@@ -13,11 +24,10 @@ spec:
   selector:
     app.kubernetes.io/component: postgres
     {{- include "chatbot.selectorLabels" . | nindent 4 }}
-{{- end }}
+
 
 ---
 
-{{- if .Values.postgres.enabled }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -42,7 +52,7 @@ spec:
         - name: postgres
           image: {{ .Values.postgres.image }}
           resources:
-            {{- toYaml .Values.chatbot.resources | nindent 12 }} 
+            {{- toYaml .Values.postgres.resources | nindent 12 }} 
           ports:
             - containerPort: {{ .Values.postgres.port }}
               name: postgres
@@ -51,7 +61,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: {{ .Values.postgres.envFrom.secret | quote }}
-                  key: POSTGRES_DB_NAME
+                  key: POSTGRES_DB
             - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
@@ -60,7 +70,7 @@ spec:
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.postgres.envFrom.secret | quote }}
+                  name: {{ .Values.postgres.envFrom.secret | quote }}                                                                                                           
                   key: POSTGRES_PASSWORD
             - name: PGDATA
               value: {{ .Values.postgres.envFrom.PGDATA | quote }}
@@ -70,10 +80,10 @@ spec:
   volumeClaimTemplates:
     - metadata:
         name: pvc-{{ include "chatbot.fullname" . }}-postgres
-      spec:
+      spec:                                                                                                                                             
         accessModes:
           - ReadWriteOnce
         resources:
           requests:
             storage: {{ .Values.postgres.storage.size }}
-{{- end }}
+
