--- a/charts/templates/postgres-deployment.yaml
+++ b/charts/templates/postgres-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Values.postgres.envFrom.secret | quote }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
 type: Opaque
 stringData:
   {{- range $key, $val := .Values.postgres.secret }}
@@ -14,7 +14,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "chatbot.fullname" . }}-postgres
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
 spec:
   type: {{ .Values.postgres.service.type }}
   ports:
@@ -32,7 +32,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: {{ include "chatbot.fullname" . }}-postgres
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/component: postgres
     {{- include "chatbot.labels" . | nindent 4 }}
