--- a/charts/templates/redis-deployment.yaml
+++ b/charts/templates/redis-deployment.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "chatbot.fullname" . }}-redis
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
 spec:
   type: {{ .Values.redis.service.type }}
   ports:
@@ -20,7 +20,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: {{ include "chatbot.fullname" . }}-redis
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/component: redis
     {{- include "chatbot.labels" . | nindent 4 }}
