--- a/charts/templates/artemis-deployment.yaml
+++ b/charts/templates/artemis-deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.artemis.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -82,3 +83,4 @@ spec:
         resources:
           requests:
             storage: {{ .Values.artemis.storage.size }}
+{{- end }}
