fix: all component versions are fixed
Signed-off-by: Gabriel Mata <gabrielmatau@gmail.com>

--- a/charts/templates/artemis-deployment.yaml
+++ b/charts/templates/artemis-deployment.yaml
@@ -58,7 +58,7 @@ spec:
         fsGroup: 1000 
       containers:
         - name: artemis
-          image: "{{ .Values.artemis.image.repository }}:{{ .Values.artemis.image.tag }}"
+          image: pache/activemq-artemis:2.41.0
           imagePullPolicy: {{ .Values.artemis.image.pullPolicy }}
           resources:
             {{- toYaml .Values.artemis.resources | nindent 12 }}
