--- a/charts/templates/redis-deployment.yaml
+++ b/charts/templates/redis-deployment.yaml
@@ -38,7 +38,7 @@ spec:
     spec:
       containers:
         - name: redis
-          image: "{{ .Values.redis.image.repository }}:{{ .Values.redis.image.tag }}"
+          image: "redis/redis-stack-server:7.2.0-v17"
           imagePullPolicy: {{ .Values.redis.image.pullPolicy }}
           resources:
             {{- toYaml .Values.redis.resources | nindent 12 }}  
